# sphere-mobile-mapping

./: README.md  build.sh  clean_rebuild.sh  global.launch  sphere.launch  sphere_LIO.launch  tim_global.launch
LIO_GF_nodelet_manager/: CMakeLists.txt  package.xml
LIO_GF_nodelet_manager/include/lio_gf_nodelet_manager/: shared_ikdtree_store.h
LIO_GF_nodelet_manager/launch/: LIO_GF_pipeline.launch  LIO_GF_pipeline_old.launch  lio_gf_pipeline.launch  manager.launch
delta_pose_filter/: CMakeLists.txt  README.md  package.xml
delta_pose_filter/launch/: config_params.launch
delta_pose_filter/src/: delta_filter_node.cpp  kalman_filter_node.cpp  tf_odom_to_maps.cpp
evaluation_msgs/: CMakeLists.txt  package.xml
global_ground_finder/: CMakeLists.txt  nodelet_plugins.xml  package.xml
global_ground_finder/data/pca/: 03_27_r_2.csv  03_27_r_2_bowling.csv
global_ground_finder/data/ransac/: 03_27_r_2.csv  03_27_r_2_bowling.csv  aussen_new_scores.csv  aussen_old_scores.csv  physik_new_scores.csv  physik_old_scores.csv  rampe_new_scores.csv  rampe_old_scores.csv  test1.csv  test2.csv  tim_without_lio.csv
global_ground_finder/data/rht/: 03_27_r_2.csv  03_27_r_2_bowling.csv
global_ground_finder/data/rht2/: 03_27_r_2.csv  03_27_r_2_bowling.csv
global_ground_finder/include/: global_ground_finder.h  hough.h  math_helpers.h
global_ground_finder/launch/: global_ground_finder.launch
global_ground_finder/scripts/: analyze_inlier_threshold.py  kernels.ipynb  plot_kernel.py
global_ground_finder/src/: global_ground_finder.cpp  global_ground_finder_nodelet.cpp  hough.cpp  main.cpp  math_helpers.cpp
ground_finder/: CMakeLists.txt  CMakeLists_copy.txt  README.md  filter_config.rviz  package.xml
ground_finder/data/: absAngleError.m  comp_final_results.m  evalRansac.m  evalScenario.m  evaluation.m  gaussian_kernel.csv  plotBarStackGroups.m  plotError.m  readCSV.m  scored_normals.csv  scored_normals_lidar_in_map2_offset.csv  scored_normals_lidar_pose_in_map2.csv  scored_normals_no_transform.csv  scored_normals_pose_in_lidar_frame.csv  stdVariance.m
ground_finder/data/GroundTruth/: GT_Caro_Draussen_hoch.txt  GT_Caro_Draussen_runter.txt  GT_Caro_Physik.txt  establishGTAngle.m
ground_finder/data/lsf/: geo-geo-obc.csv  none-geo-obc.csv
ground_finder/data/pca/: geo-geo-obc.csv  none-geo-obc.csv
ground_finder/data/ran/: geo-geo-lsf_obc.csv  geo-geo-obc.csv  none-geo-lsf_obc.csv  none-geo-obc.csv
ground_finder/data/results_plots/: draussen_hoch_times_full-inc.eps  draussen_hoch_times_full.tex  draussen_hoch_times_reduced-inc.eps  draussen_hoch_times_reduced.tex  draussen_runter_times_full-inc.eps  draussen_runter_times_full.tex  draussen_runter_times_reduced-inc.eps  draussen_runter_times_reduced.tex  flur_times_full-inc.eps  flur_times_full.tex  flur_times_reduced-inc.eps  flur_times_reduced.tex  physik_fast_times_full-inc.eps  physik_fast_times_full.tex  physik_fast_times_reduced-inc.eps  physik_fast_times_reduced.tex  physik_slow_times_full-inc.eps  physik_slow_times_full.tex  physik_slow_times_reduced-inc.eps  physik_slow_times_reduced.tex  saal_times_full-inc.eps  saal_times_full.tex  saal_times_reduced-inc.eps  saal_times_reduced.tex  tunnel_times_full-inc.eps  tunnel_times_full.tex  tunnel_times_reduced-inc.eps  tunnel_times_reduced.tex  wand_times_full-inc.eps  wand_times_full.tex  wand_times_reduced-inc.eps  wand_times_reduced.tex
ground_finder/data/results_tables/: draussen_hoch_error.txt  draussen_hoch_times.txt  draussen_runter_error.txt  draussen_runter_times.txt  flur_error.txt  flur_times.txt  physik_fast_error.txt  physik_fast_times.txt  physik_slow_error.txt  physik_slow_times.txt  ransac_comp_times.txt  saal_error.txt  saal_times.txt  tunnel_error.txt  tunnel_times.txt  wand_error.txt  wand_times.txt
ground_finder/data/rht/: geo-geo-obc.csv  none-geo-obc.csv
ground_finder/data/rht/tuning/: geo-geo-tune001.csv  geo-geo-tune002.csv  geo-geo-tune003.csv  geo-geo-tune004.csv  geo-geo-tune005.csv  geo-kdt-k01.csv  geo-kdt-k02.csv  geo-kdt-k03.csv  geo-kdt-k04.csv  rht_tuning.m
ground_finder/data/scored_old/: scored_normals_lidar_pose_global_v2.csv  scored_normals_no_transform_v1.csv  scored_normals_no_transform_v2.csv  scored_normals_transform_local_v1.csv
ground_finder/data/test/: runtime_eval_ikd.m  runtime_eval_pcl.m
ground_finder/include/: ground_finder.h  math_helpers.h
ground_finder/launch/: main.launch
ground_finder/scripts/: analyze_normal_quality.py  compare_normals.py
ground_finder/src/: .ground_finder.cpp.swp  ground_finder.cpp  main.cpp  math_helpers.cpp
ground_finder_msgs/: CMakeLists.txt  package.xml
imu_odom_phidgets/: CMakeLists.txt  package.xml
imu_odom_phidgets/config/: acc0.yaml  acc1.yaml  acc2.yaml  gyr0.yaml  gyr1.yaml  gyr2.yaml
imu_odom_phidgets/include/: autogain.hpp  ekf.hpp  filter.hpp  imuJasper.hpp  mahony.hpp  ukf.hpp  utils.hpp
imu_odom_phidgets/launch/: config.launch
imu_odom_phidgets/scripts/: plot_path.py
imu_odom_phidgets/src/: autogain.cpp  ekf.cpp  filter.cpp  imuJasper.cpp  imuJasper.h  mahony.cpp  ukf.cpp
laser_motion_distortion/: CMakeLists.txt  package.xml
laser_motion_distortion/include/: sr_lidar_distortion_correction.h
laser_motion_distortion/src/: sr_lidar_distortion_correction.cpp
lio_sphere/: CMakeLists.txt  nodelet_plugins.xml  package.xml
lio_sphere/launch/: lidar_inertial_odometry.launch  lio.launch
lio_sphere/rviz/: kiss_icp_ros1.rviz
lio_sphere/src/: distortion copy.cpp  distortion.cpp  global_config.hpp  helpers.cpp  lio_node.cpp  lio_node.hpp  lio_node_main.cpp  lio_nodelet.cpp  registration.cpp  registration_gicp copy.cpp  registration_gicp.cpp  registration_gicp_old.cpp  registration_nano_gicp.cpp  time_comp.cpp  transformation_comparison.cpp
lio_sphere/src/GraphSLAM/: graph.cpp  graph.hpp  graph_slam.cpp  graph_slam.hpp  scan.cpp  scan.hpp
lio_sphere/src/old/: lio_node.hpp
scripts/: plot_visibility_regions.m
vio_tracking_t265/: CMakeLists.txt  README.md  package.xml
vio_tracking_t265/src/: auto_reconnect.cpp  center_extrinsics.cpp
(+7 files in other folders)
