<?xml version="1.0"?>
<package format="2">
  <name>lio_gf_nodelet_manager</name>
  <version>0.0.1</version>
  <description>Dedicated nodelet manager for lio_sphere and global_ground_finder.</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>


  <export>
  </export>
</package>